<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cpxml</groupId>
    <artifactId>cpxml</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <exec.mainClass>cpxml.Cpxml2</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>sax</groupId>
            <artifactId>sax</artifactId>
            <version>2.0.1</version>
        </dependency>            
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.3.2</version>
        </dependency>
    </dependencies>    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-xjc-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>xjc</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>xsdtojava</goal>
                        </goals>
                        <configuration>
                            <sourceRoot>${basedir}/src/main/java/generated-sources</sourceRoot>
                            <xsdOptions>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/c_d_client.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/c_d_sprotype.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/c_d_texttype.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/c_specimen.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/p_special_proc.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/r_pat_demograph.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                                <xsdOption>
                                    <extension>true</extension>
                                    <bindingFile>${basedir}/src/main/resources/xjc-binding.xml</bindingFile>
                                    <xsd>${basedir}/src/main/resources/r_medrec.xsd</xsd>
                                    <packagename>cpxml.data.generated</packagename>
                                </xsdOption>
                            </xsdOptions>
                        </configuration>
                    </execution>
                </executions>                    
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>uber-${artifactId}-${version}</finalName>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>                   
                </configuration>
            </plugin>
        </plugins>
    </build>
    <name>cpxml</name>
</project>